src/manifests/vector/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-metrics
  namespace: logging
  labels:
    app.kubernetes.io/name: vector
    app.kubernetes.io/component: logging
    app.kubernetes.io/managed-by: vector.py
spec:
  selector:
    app: vector
  ports:
  - name: metrics
    port: 9598
    targetPort: 9598
  type: ClusterIP
