src/manifests/vector/vector.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-metrics
  namespace: logging
  labels:
    app.kubernetes.io/name: vector
    app.kubernetes.io/component: logging
    app.kubernetes.io/managed-by: vector.py
spec:
  selector:
    app: vector
  ports:
  - name: metrics
    port: 9598
    targetPort: 9598
  type: ClusterIP
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vector
  namespace: logging
  labels:
    app.kubernetes.io/name: vector
    app.kubernetes.io/component: logging
    app.kubernetes.io/managed-by: vector.py
spec:
  selector:
    matchLabels:
      app: vector
  template:
    metadata:
      labels:
        app: vector
        app.kubernetes.io/name: vector
        app.kubernetes.io/component: logging
        app.kubernetes.io/managed-by: vector.py
      annotations:
        vector/config-checksum: 0a2e78da9b61f4a3f760cc49b394c45fd2ce188c1580cc10f5fd3c8bb570f54c
    spec:
      serviceAccountName: vector
      tolerations:
      - operator: Exists
      volumes:
      - name: vector-config
        configMap:
          name: vector-config
          items:
          - key: vector.toml
            path: vector.toml
      - name: data-dir
        hostPath:
          path: /var/lib/vector
          type: DirectoryOrCreate
      - name: pod-logs
        hostPath:
          path: /var/log/pods
          type: Directory
      containers:
      - name: vector
        image: timberio/vector:0.55.0-distroless-static
        args:
        - -c
        - /etc/vector/vector.toml
        ports:
        - name: metrics
          containerPort: 9598
        volumeMounts:
        - name: vector-config
          mountPath: /etc/vector/vector.toml
          subPath: vector.toml
          readOnly: true
        - name: data-dir
          mountPath: /var/lib/vector
        - name: pod-logs
          mountPath: /var/log/pods
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - ALL
